apps/tochratana-template-nextjs-2863/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tochratana-template-nextjs-2863
  namespace: apps
spec:
  selector:
    app: tochratana-template-nextjs-2863
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
